z-index fix for cover page

--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ address {
   top: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.3);
-  z-index: 10;
+  z-index: 20;
 }
 
 .shopButton,
